<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".FormFragment">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:descendantFocusability="beforeDescendants"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:inputType="text"
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textSize="20sp"
                android:id="@+id/editTextCompleteName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="Nombre completo..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textColor="@color/buttonPrimary"
                android:id="@+id/textViewPersonality"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/textPersonality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/personality"
                android:id="@+id/spinnerPersonality"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textColor="@color/buttonPrimary"
                android:id="@+id/textViewHome"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/typeHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/spinnerCasa"
                android:entries="@array/typeHome"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textColor="@color/buttonPrimary"
                android:id="@+id/textViewZodiac"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/textZodiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/spinnerZodiac"
                android:entries="@array/zodiac"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textColor="@color/buttonPrimary"
                android:id="@+id/textViewAge"
                android:textSize="20sp"
                android:text="@string/textoEscogeTuEdad"
                android:paddingTop="10sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SeekBar
                    android:id="@+id/seekBarAge"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp"
                    android:max="70" />

                <EditText
                    android:editable="false"
                    android:hint="años"
                    android:id="@+id/editTextYears"
                    android:textSize="16sp"
                    android:text=""
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:drawableLeft="@mipmap/baseline_arrow_right_black_36dp"
                android:textColor="@color/buttonPrimary"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="20sp"
                android:text="@string/textChooseAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioBtnMale"
                        android:text="@string/textMale"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/radioBtnFemale"
                        android:textSize="20sp"
                        android:text="@string/textFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RadioGroup>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center">

                <Button
                    android:background="@drawable/rounded_textview"
                    android:drawableRight="@mipmap/baseline_arrow_forward_black_36dp"
                    android:id="@+id/btnSendData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/textSendData" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>